--- a/order/index.html
+++ b/order/index.html
@@ -15,18 +15,18 @@
     <script src="https://cdn.tiny.cloud/1/a0ijmuegf97wcitfcjbqekt4zuq9huhhxhs82hblex68xzkd/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
     
 		<link href="../_app/immutable/assets/0.9a2fc6ac.css" rel="stylesheet">
-		<link href="../_app/immutable/assets/Img.1d121e74.css" rel="stylesheet">
+		<link href="../_app/immutable/assets/logo.1d121e74.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/3.37c3d608.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.58d08190.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.0f9ce7b6.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.8eacf69c.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.f07bd9b3.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.6a8c7c08.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.bfa2c9bd.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.192542e2.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.68de7436.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/Img.d6a855d0.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.06fe0fbb.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.bd311af5.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/logo.18a987ba.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/all-toast.store.897c6e97.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/3.3c6c5a56.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/ResultsForm.06c30ecc.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/3.f62a5e73.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/ResultsForm.66b8770a.js">
     <title>Формирование заказа | KLIMOV.RED</title>
 </head>
 <body data-sveltekit-preload-data="hover">
@@ -801,7 +801,7 @@
     <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1"><div class="p-5 border border-gray-200 dark:border-gray-700 dark:bg-gray-900">
 
 
-<div id="drawContainerU-AdIfq-nkMdJEjKIprwK" class="flex flex-col overflow-auto max-w-[100%]"></div>
+<div id="drawContainerOGwst6srjXooX08VMwdga" class="flex flex-col overflow-auto max-w-[100%]"></div>
                             </div></div></div></td>
                     </tr><tr class="border-b dark:bg-gray-700 dark:border-gray-600 hover:bg-[gray]/5 dark:hover:bg-gray-600"><th scope="row" class="px-3 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">2</th>
                         <td class="px-2 py-4">
@@ -960,7 +960,7 @@
     <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1"><div class="p-5 border border-gray-200 dark:border-gray-700 dark:bg-gray-900">
 
 
-<div id="drawContainerUe2PZ5Ftk9G-jVnDHXvGR" class="flex flex-col overflow-auto max-w-[100%]"></div>
+<div id="drawContainerdFp2ECeMBn0vjrcmlH-X7" class="flex flex-col overflow-auto max-w-[100%]"></div>
                             </div></div></div></td>
                     </tr><tr class="border-b dark:bg-gray-700 dark:border-gray-600 hover:bg-[gray]/5 dark:hover:bg-gray-600"><th scope="row" class="px-3 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">3</th>
                         <td class="px-2 py-4">
@@ -1119,7 +1119,7 @@
     <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1"><div class="p-5 border border-gray-200 dark:border-gray-700 dark:bg-gray-900">
 
 
-<div id="drawContainer2hlFgxtGAehglkEy-lWmy" class="flex flex-col overflow-auto max-w-[100%]"></div>
+<div id="drawContainerkANaS3eAYeajK1SrY5L2Y" class="flex flex-col overflow-auto max-w-[100%]"></div>
                             </div></div></div></td>
                     </tr><tr class="border-b dark:bg-gray-700 dark:border-gray-600 hover:bg-[gray]/5 dark:hover:bg-gray-600"><th scope="row" class="px-3 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">4</th>
                         <td class="px-2 py-4">
@@ -1278,7 +1278,7 @@
     <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1"><div class="p-5 border border-gray-200 dark:border-gray-700 dark:bg-gray-900">
 
 
-<div id="drawContainerkS4I48CFVa8mV9yIp7xMa" class="flex flex-col overflow-auto max-w-[100%]"></div>
+<div id="drawContainerHUpxvBKwXmDe4rQZrPnlJ" class="flex flex-col overflow-auto max-w-[100%]"></div>
                             </div></div></div></td>
                     </tr><tr class="border-b dark:bg-gray-700 dark:border-gray-600 hover:bg-[gray]/5 dark:hover:bg-gray-600"><th scope="row" class="px-3 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">5</th>
                         <td class="px-2 py-4">
@@ -1437,7 +1437,7 @@
     <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1"><div class="p-5 border border-gray-200 dark:border-gray-700 dark:bg-gray-900">
 
 
-<div id="drawContainerzNNyLWwk2RQhDoILpTZKF" class="flex flex-col overflow-auto max-w-[100%]"></div>
+<div id="drawContainerSwmnx_ipLFphD-9s5NKfH" class="flex flex-col overflow-auto max-w-[100%]"></div>
                             </div></div></div></td>
                     </tr></tbody></table>
 
@@ -1478,7 +1478,7 @@
 			
 			<script>
 				{
-					__sveltekit_mrcqvl = {
+					__sveltekit_1d7sgyj = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -1488,8 +1488,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.58d08190.js"),
-						import("../_app/immutable/entry/app.192542e2.js")
+						import("../_app/immutable/entry/start.0f9ce7b6.js"),
+						import("../_app/immutable/entry/app.06fe0fbb.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
