--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     
 		<link href="./_app/immutable/assets/0.9a2fc6ac.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/logo.1d121e74.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.0f9ce7b6.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.e17ca025.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.8eacf69c.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.6a8c7c08.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.f2c295d7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.bfa2c9bd.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.06fe0fbb.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.a9e68364.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.bd311af5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/logo.18a987ba.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/all-toast.store.897c6e97.js">
@@ -67,7 +67,7 @@
 			
 			<script>
 				{
-					__sveltekit_1d7sgyj = {
+					__sveltekit_1mcj3nj = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -77,8 +77,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.0f9ce7b6.js"),
-						import("./_app/immutable/entry/app.06fe0fbb.js")
+						import("./_app/immutable/entry/start.e17ca025.js"),
+						import("./_app/immutable/entry/app.a9e68364.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
