--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <script src="https://cdn.tiny.cloud/1/a0ijmuegf97wcitfcjbqekt4zuq9huhhxhs82hblex68xzkd/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
     
 		<link href="./_app/immutable/assets/0.9a2fc6ac.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/logo.1d121e74.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.e17ca025.js">
+		<link href="./_app/immutable/assets/Img.1d121e74.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.0f675565.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.8eacf69c.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.f2c295d7.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.b867e26e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.bfa2c9bd.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.a9e68364.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.bd311af5.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/logo.18a987ba.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.d6b9b2f8.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.68de7436.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Img.d6a855d0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/all-toast.store.897c6e97.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.6a873a04.js">
     <title>Формирование заказа | KLIMOV.RED</title>
@@ -67,7 +67,7 @@
 			
 			<script>
 				{
-					__sveltekit_1mcj3nj = {
+					__sveltekit_7le1ec = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -77,8 +77,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.e17ca025.js"),
-						import("./_app/immutable/entry/app.a9e68364.js")
+						import("./_app/immutable/entry/start.0f675565.js"),
+						import("./_app/immutable/entry/app.d6b9b2f8.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
