--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&amp;display=swap" rel="stylesheet">
 <!--    <script src="../node_modules/flowbite/dist/flowbite.js"></script>-->
     <script src="https://cdn.tiny.cloud/1/a0ijmuegf97wcitfcjbqekt4zuq9huhhxhs82hblex68xzkd/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
-
+    
 		<link href="./_app/immutable/assets/0.9a2fc6ac.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/Img.1d121e74.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.0f675565.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.82f11a33.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.8eacf69c.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.b867e26e.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.cd594949.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.bfa2c9bd.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.d6b9b2f8.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.369e65fd.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.68de7436.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Img.d6a855d0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/all-toast.store.897c6e97.js">
@@ -64,10 +64,10 @@
 <div class="flex justify-center items-center h-[20vh]"><button class="inline-flex items-center px-5 py-2.5 font-medium text-center text-white bg-primary-600 rounded-lg focus:ring-4 focus:ring-primary-200 dark:focus:ring-primary-900 hover:bg-primary-700"><a href="order">Перейти в заказы (демо) </a></button></div>
 
 
-
+			
 			<script>
 				{
-					__sveltekit_7le1ec = {
+					__sveltekit_yt1ti4 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -77,8 +77,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.0f675565.js"),
-						import("./_app/immutable/entry/app.d6b9b2f8.js")
+						import("./_app/immutable/entry/start.82f11a33.js"),
+						import("./_app/immutable/entry/app.369e65fd.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
